2004-09-28  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-parser-error.c: 

	Use selection/single-click rather than double-click for moving
	between the parser errors; highlight the line containing the error
	when an error is selected.

2004-09-27  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-node-properties-dialog.c: 

	Changed "OK" to "Close", since the dialog is instant-apply

2004-09-23  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-primary-window.c: 

	The status bar now displays the XPath of the selected node

	* cong-text-cache.c: 

	Allow NULL attr_list, since this is required by CongEditorNodeComment

	* cong-primary-window.c: 

	Cleanup of statusbar updating

2004-09-22  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-primary-window.h

	Removed unused fields from CongPrimaryWindow

2004-09-20 Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	* cong-text-cache.c:

	Fix warnings about conversion from stripped text to original	
 
2004-09-09  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-edit-find-and-replace.c: 

	Added some bulletproofing to the "find previous" routine, for the case
	where the cursor no longer exists

2004-08-31  Douglas Burke <dburke@cfa.harvard.edu>
 
	* cong-attribute-editor-enumeration.c

	Widget is now updated correctly on undo/redo.
 
2004-08-30  Douglas Burke <dburke@cfa.harvard.edu>
 
	* cong-node-properties-dialog.c
 
 	The node-properties dialog window now displays the properties
 	of the parent node if sent a CONG_NODE_TYPE_TEXT node. This is
 	to allow editing the attributes of nodes marked as span by the
 	display specification for the document type. 

2004-08-30  Douglas Burke <dburke@cfa.harvard.edu>

	* Makefile.am, cong-attribute-editor.c, cong-attribute-editor.h

	Added support for NMTOKEN attributes.

	* cong-attribute-editor-nmtoken.c, cong-attribute-editor-nmtoken.h

	New files: provide an editor for NMTOKEN attributes. The